--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,8 +1,11 @@
+@import './sass/bases/reset';
 @import './sass/bases/variables';
 @import './sass/bases/bases';
 @import './sass/components/btn';
 
-@import './sass/layout/header';
 @import './sass/pages/home';
 @import './sass/layout/footer';
 @import './sass/pages/connection';
+@import './sass/layout/headerDesktop';
+@import './sass/pages/homeDesktop';
+@import './sass/layout/searchBar';
